<resources>
    <string name="app_name">DOJO</string>
    <string name="adicionar_livros">Adicionar livros</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="tipo">Tipo</string>
    <string name="autor">Autor</string>
    <string name="paginas_lidas">Páginas lidas</string>
    <string name="paginas">Páginas</string>
    <string name="paginas2">PÁGINAS</string>
    <string name="clean_code">Clean code</string>
    <string name="editar">Editar</string>
    <string name="delete">DELETE</string>
    <string name="genero">GÊNERO</string>
    <string name="livro">Livro</string>
    <string name="salvar">SALVAR</string>
</resources>