<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/txtProduto"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:text="@string/clean_code"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editar"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/editar"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FF4747"
        android:text="@string/delete"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editar"
        app:layout_constraintVertical_bias="0.888"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genero"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="AUTOR"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#283593"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/paginas"
        app:layout_constraintTop_toBottomOf="@+id/paginas" />

    <TextView
        android:id="@+id/paginas"
        android:layout_width="52dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1565C0"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/editar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/paginas2"
        app:layout_constraintEnd_toStartOf="@+id/paginas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/genero"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

</androidx.constraintlayout.widget.ConstraintLayout>